Create hero mobile hero section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,34 @@
         </header>
       </div>
     </section>
+    <section class="hero-wrapper">
+      <div class="container">
+        <div class="hero">
+          <div class="hero-img-container">
+            <img src="./images/Hero Image (Mobile).png" />
+          </div>
+          <article class="hero-info">
+            <h1 class="hero-heading">
+              Share your unfiltered thoughts. Get paid.
+            </h1>
+            <p class="hero-description">
+              Spense is an open platform for individuals to share their
+              unfiltered thoughts. Discuss the topics you love, and get paid for
+              doing just that.
+            </p>
+            <ul class="hero-list">
+              <li>Receive 99% off the earnings.</li>
+              <li>Get paid via Debit Card, ACH, or PayPal.</li>
+              <li>Withdraw your earnings anytime.</li>
+            </ul>
+            <form class="hero-cta">
+              <input type="text" placeholder="samsor@gmail.com" />
+              <button type="submit">Get Started</button>
+            </form>
+          </article>
+        </div>
+      </div>
+    </section>
     <script src="./js/script.js"></script>
   </body>
 </html>
