Create logo and escrow section

--- a/index.html
+++ b/index.html
@@ -87,6 +87,49 @@
         </div>
       </div>
     </section>
+    <section class="logos-wrapper">
+      <div class="container">
+        <div class="logos">
+          <img src="./images/Dribbble Logo.png" />
+          <img src="./images/Facebook Logo.png" />
+          <img src="./images/Reddit Logo.png" />
+          <img src="./images/Google Logo.png" />
+          <img src="./images/Pinterest Logo.png" />
+          <img src="./images/Slack Logo.png" />
+          <img src="./images/Twitter Logo.png" />
+          <img src="./images/Youtube Logo.png" />
+        </div>
+      </div>
+    </section>
+    <section class="escrow-wrapper">
+      <div class="container">
+        <div class="escrow">
+          <div class="escrow-info">
+            <h2 class="escrow-heading">Secure your money with Escrow.</h2>
+            <p class="escrow-description">
+              Spense uses Escrow to secure all payments. We believe Escrow
+              offers the highest level of security for your payments, so you
+              never need to worry about scams.
+            </p>
+            <a href="#" class="escrow-link">Learn more about Escrow →</a>
+          </div>
+          <div class="escrow-img-container">
+            <picture>
+              <source
+                media="(min-width: 1140px)"
+                srcset="./images/phone@x3.png"
+              />
+              <source
+                media="(min-width: 768px)"
+                srcset="./images/phone@x2.png"
+              />
+
+              <img src="./images/phone.png" />
+            </picture>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="./js/script.js"></script>
   </body>
 </html>
